# data_checks

./: .gitignore  Feature Set  README.md  README.old.md  SCRATCH.md  check_settings.py  dev-requirements.txt  dev.sh  pyproject.toml  random_test.py  requirements.txt  setup.cfg  setup.py
checks/: __init__.py  my_first_data_check.py
classes/: check.py
data_checks/: __init__.py  __main__.py  check.py  check_types.py  constants.py  data_check.py  data_exceptions.py  data_suite.py  exceptions.py  functional.py  globals.py  group_data_suite.py  ingestors.py  init.py  oop.py  rule.py  suite.py  suite_types.py
data_checks/base/: check.py  check_types.py  constants.py  dataset.py  exceptions.py  rule.py  rule_types.py  suite.py  suite_helper_types.py  suite_types.py
data_checks/classes/: data_check.py  data_suite.py  group_data_suite.py
data_checks/conf/: __init__.py  check_registry.py  data_check_registry.py  data_suite_registry.py  global_settings.py  registry.py  settings.py
data_checks/database/: __init__.py
data_checks/do/: __init__.py  analytics.py  init.py  run_check.py  silence.py
data_checks/mixins/: __init__.py  metadata_mixin.py
data_checks/utils/: check_utils.py  class_functions.py  class_utils.py  generator_utils.py  main_utils.py  metadata_utils.py  rule.py  rule_utils.py  scheduling_utils.py
examples/: README.md
scipts/: check.py
scripts/: package.sh
src/data_checks/: __init__.py  check.py  check_types.py  constants.py  dataset.py  exceptions.py  rule.py  rule_types.py  (+5 more)
tests/: WatchCompanyRevenues.py  __init__.py  check_settings.py  consistency_suite.py  data_check.py  data_suite.py  database.py  dataset.py  demo.ipynb  general_company_check.py  random-392921-e440758499f0.json  run.py  test_check.py  test_globals.py  test_util.py
(+149 files in other folders)
